--- a/fernweh.html
+++ b/fernweh.html
@@ -13,7 +13,7 @@
 	</head>
 
 	<body>
-		<a class="back" href="/">back</a>
+		<a class="back" href="index.html">back</a>
 		<section class="gallery">
 			<a href="fernweh/fw1.jpg" data-pswp-width="3888" data-pswp-height="2592">
 				<img src="thumbs/fw1.jpg" width="320" height="240" alt="" />
