--- a/moments.html
+++ b/moments.html
@@ -13,7 +13,7 @@
 	</head>
 
 	<body>
-		<a class="back" href="/">back</a>
+		<a class="back" href="index.html">back</a>
 		<section class="gallery">
 			<a href="moments/mm1.jpg" data-pswp-width="4032" data-pswp-height="3024">
 				<img src="thumbs/mm1.jpg" width="320" height="240" alt="" />
