--- a/fernweh.html
+++ b/fernweh.html
@@ -19,7 +19,7 @@
 				<img src="thumbs/fw1.jpg" width="320" height="240" alt="" />
 			</a>
 			<a href="fernweh/fw2.jpg" data-pswp-width="4032" data-pswp-height="3024">
-				<img src="thumbs/fw2.jpg" width="320" height="240" alt="" />
+				<img src="thumbs/fw2.jpg" width="320" height="240" />
 			</a>
 			<a href="fernweh/fw3.jpg" data-pswp-width="3504" data-pswp-height="2336">
 				<img src="thumbs/fw3.jpg" width="320" height="240" alt="" />
