--- a/moments.html
+++ b/moments.html
@@ -19,7 +19,12 @@
 				<img src="thumbs/mm1.jpg" width="320" height="240" alt="" />
 			</a>
 			<a href="moments/mm2.jpg" data-pswp-width="4032" data-pswp-height="3024">
-				<img src="thumbs/mm2.jpg" width="320" height="240" alt="" />
+				<img
+					src="thumbs/mm2.jpg"
+					width="320"
+					height="240"
+					alt="We will imprison 1,000,000. Siberia."
+				/>
 			</a>
 			<a href="moments/mm3.jpg" data-pswp-width="4032" data-pswp-height="3024">
 				<img src="thumbs/mm3.jpg" width="320" height="240" alt="" />
@@ -34,7 +39,12 @@
 				<img src="thumbs/mm6.jpg" width="320" height="240" alt="" />
 			</a>
 			<a href="moments/mm7.jpg" data-pswp-width="4032" data-pswp-height="3024">
-				<img src="thumbs/mm7.jpg" width="320" height="240" alt="" />
+				<img
+					src="thumbs/mm7.jpg"
+					width="320"
+					height="240"
+					alt="Vaccination saves lives. Not caring for yourself and your relatives is madness."
+				/>
 			</a>
 			<a href="moments/mm8.jpg" data-pswp-width="4032" data-pswp-height="3024">
 				<img src="thumbs/mm8.jpg" width="320" height="240" alt="" />
@@ -46,7 +56,12 @@
 				<img src="thumbs/mm10.jpg" width="320" height="240" alt="" />
 			</a>
 			<a href="moments/mm11.jpg" data-pswp-width="1125" data-pswp-height="933">
-				<img src="thumbs/mm11.jpg" width="320" height="240" alt="" />
+				<img
+					src="thumbs/mm11.jpg"
+					width="320"
+					height="240"
+					alt="Don't try to break out of this prison"
+				/>
 			</a>
 			<a href="moments/mm12.jpg" data-pswp-width="4032" data-pswp-height="3024">
 				<img src="thumbs/mm12.jpg" width="320" height="240" alt="" />
@@ -55,7 +70,7 @@
 				<img src="thumbs/mm13.jpg" width="320" height="240" alt="" />
 			</a>
 			<a href="moments/mm14.jpg" data-pswp-width="3888" data-pswp-height="2592">
-				<img src="thumbs/mm14.jpg" width="320" height="240" alt="" />
+				<img src="thumbs/mm14.jpg" width="320" height="240" alt="Despite that, don't lose hope" />
 			</a>
 			<a href="moments/mm15.jpg" data-pswp-width="4208" data-pswp-height="3120">
 				<img src="thumbs/mm15.jpg" width="320" height="240" alt="" />
